fix: change dependencies for cropping image

--- a/src/style/custom.scss
+++ b/src/style/custom.scss
@@ -102,3 +102,14 @@ div[tabindex='-1'] {
 
   line-height: 36px;
 }
+
+.cropt-container .cr-boundary  {
+	width: 300px;
+	height: 300px;
+	margin: 0 0 0 0;
+}
+
+.cropt-container .cr-slider-wrap {
+	width: 300px;
+	margin: 15px 0;
+}
